--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
+application.version=0.0.1
 
-
+###### \u4E03\u725B OSS \u8BA4\u8BC1\u914D\u7F6E
 qiniu.access-key=
 qiniu.secret-key=
 qiniu.bucket-name=
+qiniu.bucket-domain=
+
+###### \u540C\u6B65\u53C2\u6570\uFF1A\u4E03\u725B
+#sync.qiniu.prefix
+#sync.qiniu.limit
+#sync.qiniu.delimiter
+
+###### \u540C\u6B65\u53C2\u6570\uFF1ANAS
+sync.nas.location=G:/tmp/qiniusyncnas/
+
+# \u4F1A\u68C0\u67E5\u7EC8\u7AEF\u662F\u5426\u652F\u6301ANSI\uFF0C\u662F\u7684\u8BDD\u5C31\u91C7\u7528\u5F69\u8272\u8F93\u51FA
+spring.output.ansi.enabled=detect
