--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.qiniu:qiniu-java-sdk:[7.2.0, 7.2.99]'
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'commons-io:commons-io:2.6'
     implementation 'commons-collections:commons-collections:3.2.2'
 
     compileOnly 'org.projectlombok:lombok'
