--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 pluginManagement {
     repositories {
+        maven {
+            url maven_url
+        }
         gradlePluginPortal()
     }
 }
