添加七牛外链协议配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ application.version=0.0.1
 qiniu.access-key=
 qiniu.secret-key=
 qiniu.bucket-name=
+# cdn\u534F\u8BAE\uFF0C\u9ED8\u8BA4 https
+#qiniu.cdn-schema=
 
 ###### \u540C\u6B65\u53C2\u6570\uFF1A\u4E03\u725B
 #sync.qiniu.prefix
