--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 maven_url=http://maven.aliyun.com/nexus/content/groups/public/
 
 # \u7248\u672C
-application_version = 0.0.1-SNAPSHOT
+application_version = 1.0.0
