--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.profiles.active=dev
 
 spring.application.name=qiniu-sync-nas
-application.version=0.0.2
 
 ###### \u4E03\u725B OSS \u8BA4\u8BC1\u914D\u7F6E
 qiniu.access-key=
 qiniu.secret-key=
 qiniu.bucket-name=
-# cdn\u534F\u8BAE\uFF0C\u9ED8\u8BA4 https
-#qiniu.cdn-schema=
+
+# cdn \u662F\u5426\u5F00\u542Fjpg\u3001png\u56FE\u7247\u7626\u8EAB
+#qiniu.cdn-photo-slim=true
 
 ###### \u540C\u6B65\u53C2\u6570\uFF1A\u4E03\u725B
 #sync.qiniu.prefix
