--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 #Maven\u4ED3\u5E93\u7684URL
 maven_url=http://maven.aliyun.com/nexus/content/groups/public/
 
+#snapshot \u4ED3\u5E93\u5730\u5740
+oss_sonatype_snapshot_maven_url=https://oss.sonatype.org/content/repositories/snapshots/
+
 # \u7248\u672C
 application_version = 1.0.0
